--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
 <body>
 
   <header>
-    <h1>Conexão Campo & Cidade</h1>
-    <p>Um projeto que celebra a união entre dois mundos essenciais</p>
+    <center><h1>Biogás: A Energia Sustentável Aproximando o Campo e a Cidade</h1></center>
+    <p>Nos últimos anos, o avanço das tecnologias sustentáveis tem transformado a maneira como os fazendeiros aproveitam recursos naturais.
+         Um exemplo promissor dessa inovação é a produção de biogás a partir do esterco animal, que não só reduz impactos ambientais como também fortalece a conexão
+          entre áreas rurais e centros urbanos.</p>
+    <p></p>
   </header>
 
   <section class="banner">
-    <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os alunos exploram como o campo e a cidade se complementam.</p>
+    <center><h2>O Processo de Produção do Biogás</h2></center>
+    <p>A geração de biogás acontece por meio da biodigestão, um processo biológico onde bactérias anaeróbicas decompõem a matéria orgânica presente no esterco animal.
+         Esse procedimento ocorre dentro de um biodigestor,equipamento que permite a fermentação controlada do material, resultando na produção de metano
+          – um gás inflamável que pode ser utilizado para gerar eletricidade,aquecer ambientes ou até abastecer veículos movidos a biocombustível.
+        Além da energia, a biodigestão gera um subproduto chamado biofertilizante, que pode ser reaproveitado na agricultura,melhorando a qualidade do solo
+         e reduzindo a necessidade de fertilizantes químicos. Isso cria um ciclo sustentável onde resíduos são transformados em recursos valiosos.</p>
   </section>
 
   <section class="sobre">
-    <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, constroem o nosso dia a dia. Este espaço é dedicado à valorização de ambos os ambientes por meio de textos, imagens e criatividade dos alunos.</p>
+    <center><h2>Benefícios para Fazendeiros e para a Cidade</h2></center>
+    <p>A implementação dessa tecnologia traz vantagens tanto para produtores rurais quanto para a sociedade urbana. Para os fazendeiros, o biogás representa uma oportunidade de reduzir custos energéticos, garantir maior independência frente às concessionárias elétricas e gerar renda extra com a comercialização do gás excedente. Além disso, o biofertilizante melhora a produtividade agrícola sem causar danos ao meio ambiente.
+        Para as cidades, essa inovação traz benefícios como a redução da dependência de combustíveis fósseis e a ampliação do uso de energia limpa. Empresas de abastecimento energético podem comprar biogás produzido no campo e utilizá-lo na matriz energética urbana, promovendo uma transição para modelos mais sustentáveis.</p>
   </section>
 
   <section class="galeria">
-    <h2>Galeria de Imagens</h2>
-    <div class="imagem-box">
-      <p><strong>Campo:</strong></p>
-      <img src="" alt="Imagem do campo" class="imagem-exemplo">
+    <center><h2>Galeria de Imagens</h2></center>
+<center><img src="close-up-de-uma-planta-de-biogas-imagem-detalhada-de-uma-fabrica-de-biogasio-mostrando-as-maquinas-e-tanques-usados-para-converter-residuos-organicos-em-fotografia-de-energia_1288204-5697.avif" img></center>
+<center><img src="INFO_BIOGAS-portada-02-02-759x500.jpg"img></center>
 
-      <p><strong>Cidade:</strong></p>
-      <img src="" alt="Imagem da cidade" class="imagem-exemplo">
+
+    <div class="imagem-box">
+     
     </div>
   </section>
 
   <section class="textos">
-    <h2>Textos e Reflexões</h2>
-    <p><strong>1. O que o campo representa para você?</strong></p>
-    <textarea rows="4" placeholder="Escreva aqui..."></textarea>
-
-    <p><strong>2. Como a cidade se conecta com a vida rural?</strong></p>
-    <textarea rows="4" placeholder="Digite sua resposta..."></textarea>
-  </section>
+    
 
   <footer>
-    <p>&copy; 2025 – Projeto Agrinho | Escola ____________________</p>
+    <p>&copy; 2025 – Projeto Agrinho | Colégio Estadual do Campo Pedro Marcondes Ribas.</p>
   </footer>
 
 </body>
